[project]
name = "arc-cli"
version = "0.0.1"
description = "Arc CLI, part of FeiTianChengZi Arc Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD). Based on GitHub Spec Kit."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
arc = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
